--- a/wind_speed.html
+++ b/wind_speed.html
@@ -57,9 +57,8 @@
           <h3 class="title">Wind Speed</h3>
           <hr>
           <img src="Resources/assets/images/Fig4.png" alt="Wind Speed Graph">
-          <p>Wind speed appears to slightly increase as we move away from the equator. However, to conclusively
-            describe a pattern, we would need to go beyond the range in data to reach cities at closer to the poles.
-            Only then can we have a sample large to confirm the pattern.</p>
+          <p>Wind speed appears to increase slightly as one moves away from the equator. However, one would need to go beyond the range in data to reach cities closer to the poles.
+            Only then can one have a sample large enough to confirm the pattern.</p>
         </div>
       </div>
       <div class="col-lg-5 col-md-12">
@@ -99,7 +98,7 @@
   </div>
   <!-- Footer Section -->
   <footer>
-    <div class="footer">Copyright &copy; Gabriela Cantu 2018</div>
+    <div class="footer">Copyright &copy; John Glendening 2021</div>
   </footer>
 
   <!-- Bootstrap JS -->
