--- a/wind_speed.html
+++ b/wind_speed.html
@@ -41,8 +41,7 @@
                         <a class="nav-link" href="data.html">Data</a>
                     </li>
 
-<<<<<<< HEAD
-                </ul>
+                    <<<<<<< HEAD </ul>
             </div>
         </nav>
     </div>
@@ -57,95 +56,95 @@
                     <img src="Resources/assets/images/Fig4.png" alt="Wind Speed Graph">
                     <p>Wind speed appears to increase slightly as one moves away from the equator. However, one would need to go beyond the range in data to reach cities closer to the poles. Only then can one have a sample large enough to confirm the pattern.</p>
                 </div>
-=======
-        </ul>
-      </div>
-    </nav>
-  </div>
-  <!-- Content Section -->
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-7 col-md-12">
-        <!-- Left box  -->
-        <div class="box">
-          <h3 class="title">Wind Speed</h3>
-          <hr>
-          <img src="Resources/assets/images/Fig4.png" alt="Wind Speed Graph">
-          <p>Wind speed appears to increase slightly as one moves away from the equator. However, one would need to go beyond the range in data to reach cities closer to the poles.
-            Only then can one have a sample large enough to confirm the pattern.</p>
-        </div>
-      </div>
-      <div class="col-lg-5 col-md-12">
-        <!-- Right Box -->
-        <div class="box">
-          <h5 class="title">Visualizations</h5>
-          <hr>
-          <div class="container">
-            <div class="row" style="padding-bottom: 30px;">
-              <div class="col-6">
-                <a href="max_temperature.html">
-                  <img class="panel" src="Resources/assets/images/Fig1.png" alt="Max Temperature Image">
-                </a>
-              </div>
-              <div class="col-6">
-                <a href="humidity.html">
-                  <img class="panel" src="Resources/assets/images/Fig2.png" alt="Humidity Graph">
-                </a>
-              </div>
->>>>>>> 5268a5fab9f8726362683e3698dd94880f3d947e
+                =======
+                </ul>
             </div>
-            <div class="col-lg-5 col-md-12">
-                <!-- Right Box -->
-                <div class="box">
-                    <h5 class="title">Visualizations</h5>
-                    <hr>
-                    <div class="container">
-                        <div class="row" style="padding-bottom: 30px;">
-                            <div class="col-6">
-                                <a href="max_temperature.html">
-                                    <img class="panel" src="Resources/assets/images/Fig1.png" alt="Max Temperature Image">
-                                </a>
+            </nav>
+        </div>
+        <!-- Content Section -->
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-7 col-md-12">
+                    <!-- Left box  -->
+                    <div class="box">
+                        <h3 class="title">Wind Speed</h3>
+                        <hr>
+                        <img src="Resources/assets/images/Fig4.png" alt="Wind Speed Graph">
+                        <p>Wind speed appears to increase slightly as one moves away from the equator. However, one would need to go beyond the range in data to reach cities closer to the poles. Only then can one have a sample large enough to confirm the
+                            pattern.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-lg-5 col-md-12">
+                    <!-- Right Box -->
+                    <div class="box">
+                        <h5 class="title">Visualizations</h5>
+                        <hr>
+                        <div class="container">
+                            <div class="row" style="padding-bottom: 30px;">
+                                <div class="col-6">
+                                    <a href="max_temperature.html">
+                                        <img class="panel" src="Resources/assets/images/Fig1.png" alt="Max Temperature Image">
+                                    </a>
+                                </div>
+                                <div class="col-6">
+                                    <a href="humidity.html">
+                                        <img class="panel" src="Resources/assets/images/Fig2.png" alt="Humidity Graph">
+                                    </a>
+                                </div>
+                                >>>>>>> 5268a5fab9f8726362683e3698dd94880f3d947e
                             </div>
-                            <div class="col-6">
-                                <a href="humidity.html">
-                                    <img class="panel" src="Resources/assets/images/Fig2.png" alt="Humidity Graph">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="row" style="padding-bottom: 30px;">
-                            <div class="col-6">
-                                <a href="cloudiness.html">
-                                    <img class="panel" src="Resources/assets/images/Fig3.png" alt="Cloudiness Graph">
-                                </a>
-                            </div>
-                            <div class="col-6">
-                                <a href="wind_speed.html">
-                                    <img class="panel active" src="Resources/assets/images/Fig4.png" alt="Wind Speed Graph">
-                                </a>
+                            <div class="col-lg-5 col-md-12">
+                                <!-- Right Box -->
+                                <div class="box">
+                                    <h5 class="title">Visualizations</h5>
+                                    <hr>
+                                    <div class="container">
+                                        <div class="row" style="padding-bottom: 30px;">
+                                            <div class="col-6">
+                                                <a href="max_temperature.html">
+                                                    <img class="panel" src="Resources/assets/images/Fig1.png" alt="Max Temperature Image">
+                                                </a>
+                                            </div>
+                                            <div class="col-6">
+                                                <a href="humidity.html">
+                                                    <img class="panel" src="Resources/assets/images/Fig2.png" alt="Humidity Graph">
+                                                </a>
+                                            </div>
+                                        </div>
+                                        <div class="row" style="padding-bottom: 30px;">
+                                            <div class="col-6">
+                                                <a href="cloudiness.html">
+                                                    <img class="panel" src="Resources/assets/images/Fig3.png" alt="Cloudiness Graph">
+                                                </a>
+                                            </div>
+                                            <div class="col-6">
+                                                <a href="wind_speed.html">
+                                                    <img class="panel active" src="Resources/assets/images/Fig4.png" alt="Wind Speed Graph">
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
+                    <<<<<<< HEAD <!-- Footer Section -->
+                        <footer>
+                            <div class="footer">Copyright &copy; John Glendening 2021</div>
+                        </footer>
+                        =======
                 </div>
-            </div>
-        </div>
-    </div>
-<<<<<<< HEAD
-    <!-- Footer Section -->
-    <footer>
-        <div class="footer">Copyright &copy; John Glendening 2021</div>
-    </footer>
-=======
-  </div>
-  <!-- Footer Section -->
-  <footer>
-    <div class="footer">Copyright &copy; John Glendening 2021</div>
-  </footer>
->>>>>>> 5268a5fab9f8726362683e3698dd94880f3d947e
+                <!-- Footer Section -->
+                <footer>
+                    <div class="footer">Copyright &copy; John Glendening 2021</div>
+                </footer>
+                >>>>>>> 5268a5fab9f8726362683e3698dd94880f3d947e
 
-    <!-- Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+                <!-- Bootstrap JS -->
+                <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+                <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+                <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 
 </html>
