--- a/max_temperature.html
+++ b/max_temperature.html
@@ -56,8 +56,8 @@
                     <h3 class="title">Max Temperature</h3>
                     <hr>
                     <img src="Resources/assets/images/Fig1.png" alt="Max Temperature Graph">
-                    <p>As expected, the weather becomes significantly warmer as one approaches the equator. Moreover, the southern hemisphere tends to be warmer this time of the year than the northern hemisphere. This may be due to the tilt of the earth
-                        at the time of the year.</p>
+                    <p>As expected, the weather becomes significantly warmer as one approaches the equator. Moreover, the southern hemisphere tends to be warmer than the northern hemisphere this time of the year. This may be due to pulling the data while
+                        the tilt of the earth makes the hemisphere warmer.</p>
                 </div>
             </div>
             <div class="col-lg-5 col-md-12">
